--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
   <main class="pb-5 container">
     <div class="text-center p-4">
       <h2>Productos</h2>
-      <p class="lead">Verás aquí todss los productos de la categoría <strong>Autos</strong></p>
+      <p class="lead">Verás aquí todos los productos de la categoría <strong>Autos</strong></p>
     </div>
     <div class="container">
       <div class="row">
