--- a/portada.html
+++ b/portada.html
@@ -30,6 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" id="user" href="#"></a>
           </li>
         </ul>
       </div>
