--- a/product-info.html
+++ b/product-info.html
@@ -31,6 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" id="user" href="#"></a>
           </li>
         </ul>
       </div>
@@ -38,9 +39,27 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div id="product-info"></div>
+      <h4 class="mt-5">Comentarios</h4>
+      <div id="product-comment"></div>
+      <div id="newComment"></div>
+      <div id="create-comment">
+        <h4 class="mt-3">Comentar</h4>
+        <h6>Tu opinión:</h6>
+        <textarea class="form-control" id="textComment" rows="3"></textarea>
+        <h6 class="mt-3">Tu puntuación:</h6>
+        <select class="form-select mb-2" id="myScore">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+        <button id="btnComment" class="btn btn-primary">Enviar</button>
       </div>
+      <!-- <div class="alert alert-danger text-center" role="alert">
+        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      </div> -->
     </div>
   </main>
   <footer class="text-muted">
