--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
     </div>
   
     <div class="text-center mb-3">
-      <input class="col-lg-12 border-light" type="search" id="searchBar" placeholder="Escribe aquí tu búsqueda...">
+      <input class="col-lg-12 form-control" type="search" id="searchBar" placeholder="Escribe aquí tu búsqueda...">
     </div>
 
     <div class="container">
