--- a/product-info.html
+++ b/product-info.html
@@ -31,12 +31,13 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <div>
+            <div class="d-flex align-items-center">
+              <span id="noLogin"></span>
               <a class="nav-link btn btn-secondary bg-dark dropdown-toggle" id="user" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"></a>
 
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
-                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                <li><a id="profile" class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
                 <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
               </ul>
             </div>
